2004-04-25  Kim F. Storm  <storm@cua.dk>

	* macterm.c (x_draw_hollow_cursor): Fix height of box for narrow lines.

	* xterm.c (x_draw_hollow_cursor): Fix height of box for narrow lines.

	* xdisp.c (append_space_for_newline): Rename from append_space.
	Remove DEFAULT_FACE_P arg; always use current face.  Callers changed.
	(x_produce_glyphs): Handle line-spacing property on newline char.
	If value is t, adjust ascent and descent to fit current row height.
	If value is an integer or float, set extra_line_spacing to integer
	value, or to float value x current line height.

2004-04-23  Kenichi Handa  <handa@m17n.org>

	* fontset.c (Finternal_char_font): If POSITION is nil, return
	font for displaying CH with the default face.

2004-04-23  Juanma Barranquero  <lektu@terra.es>

	* makefile.w32-in: Add "-*- makefile -*-" mode tag.

2004-04-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lisp.h (XINT) [EXPLICIT_SIGN_EXTEND && !NO_UNION_TYPE]:
	Don't make assumptions about the relative place of i and val.
	(EQ) [!NO_UNION_TYPE]: Don't forget to check the type match as well.

2004-04-21  Kim F. Storm  <storm@cua.dk>

	* dispextern.h (struct glyph_slice): New struct.
	(struct glyph): New member slice.
	(GLYPH_SLICE_EQUAL_P): New macro.
	(GLYPH_EQUAL_P): Use it.
	(struct glyph_string): New member slice.
	(struct it_slice): New struct.
	(struct it): New member slice, add member to stack too.
	New member constrain_row_ascent_descent_p.
	(image_ascent): Add prototype.

	* dispnew.c (buffer_posn_from_coords): Return full image width
	and height even for image slices (posn is relative to full image).
	(marginal_area_string): Adjust x0,y0 for image slice.

	* image.c (image_ascent): Add slice arg; calculate ascent for
	image slice (or full image).

	* keyboard.c (Fposn_at_x_y, Fposn_at_point): New defuns.
	(syms_of_keyboard): Defsubr them.

	* lisp.h (pos_visible_p): Fix prototype.

	* macterm.c (x_draw_relief_rect): Add top_p and bot_p args.